# url-shortener

./: .env.dev  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  main.rs  models.rs  utils.rs
src/clients/: postgres.rs  redis.rs
src/migrations/: start.sql
src/repositories/: url.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/services/: shorten.rs
