[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.21.3"
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
